rhai/codegen/ui_tests/second_shared_ref.stderr
error: function parameters other than the first one cannot be passed by reference
  --> ui_tests/second_shared_ref.rs:12:41
   |
12 | pub fn test_fn(input: Clonable, factor: &bool) -> bool {
   |                                         ^

error[E0425]: cannot find function `test_fn` in this scope
  --> ui_tests/second_shared_ref.rs:23:8
   |
23 |     if test_fn(n, &true) {
   |        ^^^^^^^ not found in this scope
